# zotero-arxiv-daily

./: .gitignore  construct_email.py  construct_rss.py  main.py  paper.py  pyproject.toml  recommender.py  requirements.txt  utils.py
.github/workflows/: combined.yml  deploy-pages.yml  main.yml  static.yml  test.yml
public/: index.xml
